...
        </array>
    </customFonts>
    <scenes>
        <!--Master-->
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="Master" id="RMx-3f-FxP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="7bK-jq-Zjz" kind="relationship" relationship="rootViewController" id="tsl-Nk-0bq"/>
...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="7bK-jq-Zjz" id="Gho-Na-rnu"/>
                            <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Menu" id="Zdf-7t-Un8"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="708" y="-630.13493253373315"/>
        </scene>
        <!--Information-->
...
                            <constraint firstItem="EGw-M8-gSW" firstAttribute="bottom" secondItem="ikj-UT-maM" secondAttribute="bottom" id="Fio-8G-HDq"/>
                            <constraint firstItem="EGw-M8-gSW" firstAttribute="leading" secondItem="ikj-UT-maM" secondAttribute="leading" id="Hin-RD-H5F"/>
                            <constraint firstItem="EGw-M8-gSW" firstAttribute="top" secondItem="ikj-UT-maM" secondAttribute="top" id="z53-iA-TAG"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="ikj-UT-maM"/>
                    </view>
                    <navigationItem key="navigationItem" title="Information" id="zIa-Mp-g2C"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
                        <outlet property="txtInfo" destination="EGw-M8-gSW" id="NEZ-a8-iBC"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="49E-fC-h4N" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="MNn-YL-ltp" firstAttribute="bottom" secondItem="7bf-1V-FVm" secondAttribute="bottom" id="Tmu-TY-zzF"/>
                            <constraint firstItem="MNn-YL-ltp" firstAttribute="leading" secondItem="7bf-1V-FVm" secondAttribute="leading" id="Vq7-10-dpd"/>
                            <constraint firstItem="3XJ-sk-rNV" firstAttribute="leading" secondItem="7bf-1V-FVm" secondAttribute="leading" constant="16" id="uih-DY-zOb"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="7bf-1V-FVm"/>
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="f4C-WE-2yX"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
                        <outlet property="collectionView" destination="MNn-YL-ltp" id="qFJ-dq-Z14"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="C78-T9-eQh" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="2hT-yA-Spg" id="ueC-zB-2dy"/>
                            <outlet property="delegate" destination="2hT-yA-Spg" id="qJf-Ct-7sm"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="About" id="erH-Z3-kM0"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
                        <outlet property="lblVersion" destination="vLA-kS-fQZ" id="O0V-gV-eJa"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fDs-53-2ul" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
